# Multi-Agent

./: README.md  README.zh-CN.md  makefile  pyproject.toml
agent-fastpy/: .env  README.md  app.db  demo.html  pyproject.toml  requirements.txt
agent-fastpy/app/: main.py
agent-fastpy/app/core/: __init__.py  async_agent.py  async_environment.py  async_main.py  config.py  logger.py  message_queue.py  monitor.py  templates.py
agent-fastpy/app/models/: task.py
agent-fastpy/app/routes/: tasks.py
agent-fastpy/app/schemas/: __init__.py
agent-fastpy/app/services/: agent.py  environment.py  websocket.py
agent-fastpy/frontend/: auto-imports.d.ts  package-lock.json  package.json  vite.config.ts
agent-fastpy/frontend/app/: app.css  daisyui.d.ts  reactbits.d.ts  root.tsx  types.ts
agent-fastpy/frontend/app/components/: Header.tsx  SearchInput.tsx  TaskCard.tsx  TaskLogDrawer.tsx  TaskModal.tsx  TaskTable.tsx  WorkflowSteps.tsx
agent-fastpy/frontend/app/routes/: home.tsx
agent-fastpy/frontend/app/services/: api.ts
agent-fastpy/frontend/app/types/: task.ts
agent-fastpy/tests/: test_async_agent.py  test_environment.py
agent_playground/: READMD.md  context_manager.py  main.py  monitoring.py  task_manager.py
agent_playground/agents/: __init__.py  base.py  devops_engineer.py  llm_agent_base.py  llm_integration.py  programmer.py  requirement_analyst.py  system_architect.py  tester.py
agent_playground/models/: __init__.py  agent.py  task.py
agent_ts/: README.md  package.json
agent_ts/src/: agent.ts  app.ts  handler.ts  llm.ts
breakthrough_design/decorators/: async_with_dec.py  (+1 more)
prompts/: 提示词工程.md
(+8 files in other folders)
